# resume-chatbot

./: .gitignore  Dockerfile  LICENSE  MANUAL.md  README.md  fly.toml  index.html  privacy.html  pyproject.toml
backend/: README.md  app.py  pyproject.toml  requirements.txt
backend/faiss_index/: index.faiss  index.pkl
frontend/: consent.js  index.html  script.js  style.css
