[project]
name = "resume-chatbot"
version = "0.1.0"
description = "Backend for the resume chatbot"
authors = [
    { name="Karush Pradhan", email="karushpradhan@gmail.com" }
]
license = { file="LICENSE" }
topics = ["resume", "chatbot"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "flask>=3.1.2",
    "langchain>=0.3.27",
    "openai>=2.1.0",
    "pypdf2>=3.0.1",
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
