[project]
name = "resume-chatbot"
version = "0.1.0"
description = "Backend for the resume chatbot"
authors = [
    { name="Karush Pradhan", email="karushpradhan@gmail.com" }
]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "flask>=3.1.2",
    "flask-cors>=4.0.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.0",
    "pypdf2>=3.0.1",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
